checkpoint: реализация getBookings из EasyMsClient